Fix Flapper URL

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p>Some fun stuff:</p>
 
           <ul>
-              <li>I made plugins for <a href="https://www.npmjs.com/package/react-split-flap-effect">React</a> and <a href="http://www.jaykayess.com/flapper/">jQuery</a> that replicate Solari displays.</li>
+              <li>I made plugins for <a href="https://www.npmjs.com/package/react-split-flap-effect">React</a> and <a href="http://www.jaykayess.com/Flapper/">jQuery</a> that replicate Solari displays.</li>
               <li>I made a <a href="http://chromati.co">toy that generates random desktop wallpaper</a>.</li>
               <li>That time I had <a href="http://www.imdb.com/name/nm1217911/">a small part in a movie</a>.</li>
           </ul>
